--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,12 +15,14 @@
   },
   "dependencies": {
     "axios": "^1.6.7",
+    "iconify": "^1.4.0",
     "pinia": "^2.1.7",
     "qs": "^6.11.2",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
+    "@iconify/vue": "^4.1.1",
     "@rushstack/eslint-patch": "^1.3.3",
     "@tsconfig/node20": "^20.1.2",
     "@types/jsdom": "^21.1.6",
